# thcmx

./: README.md
FreeCoAP/: CMakeLists.txt  README.md
FreeCoAP/certs/: gen_certs.sh
FreeCoAP/coap/include/: coap_client.h  coap_msg.h  config.h  cross.h  data_buf.h  lock.h  thread.h  tls.h  tls_sock.h
FreeCoAP/coap/src/: CMakeLists.txt  coap_client.c  coap_log.c  coap_msg.c  coap_server.c  config.c  cross.c  data_buf.c  http_msg.c  sock.c  thread.c  tls.c  tls_sock.c  uri.c  util.c
FreeCoAP/coap/test/: CMakeLists.txt  test.c  test.h  test_coap_client.c  test_coap_msg.c  test_coap_server.c  test_config.c  test_cross.c  test_data_buf.c  test_http_client.c  test_http_msg.c  test_lock.c  test_thread.c  test_tls_client.c  test_tls_server.c  test_uri.c
FreeCoAP/proxy/http_coap/include/: param.h
FreeCoAP/proxy/http_coap/src/: CMakeLists.txt  connection.c  listener.c  param.c  proxy.c
RESTful/: test.cpp
doc/: api接口设计.md  libcoap安装和使用.md
